<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        android:label="@string/welcome_title"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.instructions.InstructionsFragment"
        android:label="@string/instructions_title"
        tools:layout="@layout/instructions_fragment">
        <action
            android:id="@+id/action_instructionsFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.udacity.shoestore.shoeslist.ShoesListFragment"
        android:label="@string/shoes_list_title"
        tools:layout="@layout/shoes_list_fragment" >
        <action
            android:id="@+id/action_shoesListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_shoesListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail_title" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/shoesListFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>